// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepositoriesPanel Both r: and repo: filters are tracked 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <ul
          class="list-group"
        >
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:sourcegraph"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  sourcegraph
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test
                </span>
              </a>
            </small>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button is shown if more pages are available 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <ul
          class="list-group"
        >
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:sourcegraph"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  sourcegraph
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test-two"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test-two
                </span>
              </a>
            </small>
          </li>
        </ul>
        <div
          class="text-center py-3"
        >
          <button
            class="btn btnLink test-repositories-panel-show-more"
            type="button"
          >
            Show more
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel Show More button loads more items 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <ul
          class="list-group"
        >
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:sourcegraph"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  sourcegraph
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test-two"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test-two
                </span>
              </a>
            </small>
          </li>
        </ul>
        <div
          class="text-center py-3"
        >
          <button
            class="btn btnLink test-repositories-panel-show-more"
            type="button"
          >
            Show more
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RepositoriesPanel consecutive searches with identical repo filters are correctly merged when rendered 1`] = `
<DocumentFragment>
  <div
    class="repositories-panel panelContainer d-flex flex-column"
  >
    <div
      class="d-flex border-bottom header"
    >
      <h2
        class="h2 h4 headerText"
      >
        Repositories
      </h2>
    </div>
    <div
      class="h-100 content"
    >
      <div
        class="mt-2"
      >
        <div
          class="d-flex mb-1"
        >
          <small>
            Search
          </small>
        </div>
        <ul
          class="list-group"
        >
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:test"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  test
                </span>
              </a>
            </small>
          </li>
          <li
            class="text-monospace text-break mb-2"
          >
            <small>
              <a
                class="anchorLink"
                href="/search?q=repo:sourcegraph"
              >
                <span
                  class="text-monospace search-query-link"
                >
                  <span
                    class="search-filter-keyword"
                  >
                    repo
                  </span>
                  <span
                    class="search-filter-separator"
                  >
                    :
                  </span>
                  sourcegraph
                </span>
              </a>
            </small>
          </li>
        </ul>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
